--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-order-list-page/duraform-order-list-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-order-list-page/duraform-order-list-page.component.html
@@ -185,7 +185,7 @@
       <tbody *ngIf="itemList.items.length > 0">
         <tr *ngFor="let order of itemList.items">
           <td (click)="onSelectOrder(order.id)">
-            {{ order.id | leading: "0000000" }}
+            {{ order.id | leading }}
           </td>
           <td (click)="onSelectOrder(order.id)">
             {{ order.customerReference }}
