--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/machine-packing-controller/machine-packing-controller.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/machine-packing-controller/machine-packing-controller.component.html
@@ -20,7 +20,7 @@
                 ]"
                 target="_blank"
               >
-                [{{ process.enquiryId | leading: "000000" }}]
+                [{{ process.enquiryId | leading }}]
               </a>
             </td>
             <td class="text-center">
