--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_delivery-docket.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_delivery-docket.scss
@@ -28,10 +28,10 @@
       }
 
       @media print {
-        font-size: 14px;
+        font-size: 12px;
 
         .name {
-          font-size: 40px;
+          font-size: 30px;
         }
       }
     }
@@ -55,10 +55,14 @@
         font-weight: normal;
         margin-top: 10px;
         text-transform: uppercase;
+
+        @media print {
+          margin-top: 5px;
+        }
       }
 
       @media print {
-        font-size: 20px;
+        font-size: 16px;
       }
     }
   }
@@ -68,7 +72,7 @@
     margin-top: 50px;
 
     @media print {
-      margin-top: 35px;
+      margin-top: 25px;
     }
 
     .box {
@@ -88,7 +92,7 @@
         text-transform: uppercase;
 
         @media print {
-          margin-bottom: 10px;
+          margin-bottom: 8px;
         }
       }
 
@@ -123,7 +127,7 @@
     }
 
     @media print {
-      margin-top: 35px;
+      margin-top: 25px;
     }
   }
 
@@ -131,14 +135,12 @@
     margin-top: 30px;
 
     .component-table {
-      page-break-inside: avoid;
-
       &:not(:first-child) {
         margin-top: 30px;
       }
 
       .title {
-        font-size: 35px;
+        font-size: 25px;
         font-weight: bold;
 
         @media print {
@@ -156,6 +158,7 @@
           tr {
             th {
               font-weight: 300;
+              font-size: 16px;
               padding: 5px 0;
 
               &.qty {
@@ -170,7 +173,7 @@
                 width: 110px;
 
                 @media print {
-                  width: 65px;
+                  width: 60px;
                 }
               }
 
@@ -178,7 +181,38 @@
                 width: 110px;
 
                 @media print {
-                  width: 65px;
+                  width: 60px;
+                }
+              }
+
+              &.drawers {
+                width: 110px;
+              }
+
+              &.drawer-type {
+              }
+
+              &.shields {
+                width: 90px;
+
+                @media print {
+                  width: 80px;
+                }
+              }
+
+              &.rail-size {
+                width: 110px;
+
+                @media print {
+                  width: 60px;
+                }
+              }
+
+              &.extra-rail {
+                width: 95px;
+
+                @media print {
+                  width: 80px;
                 }
               }
 
@@ -188,6 +222,20 @@
 
                 @media print {
                   width: 15px;
+                }
+              }
+
+              &.drill-front {
+                text-align: center;
+                width: 80px;
+              }
+
+              &.draw-size {
+                padding-left: 10px;
+                width: 100px;
+
+                @media print {
+                  width: 60px;
                 }
               }
 
@@ -221,19 +269,19 @@
 
               &.edge {
                 padding-left: 10px;
-                width: 295px;
+                width: 250px;
 
                 @media print {
-                  width: unset;
+                  width: 140px;
                 }
               }
 
               &.hinge-hole {
                 padding-left: 10px;
-                width: 190px;
+                width: 180px;
 
                 @media print {
-                  width: unset;
+                  width: 120px;
                 }
               }
 
@@ -259,8 +307,9 @@
 
           tr {
             td {
+              font-size: 18px;
               min-height: 15px;
-              padding: 10px 0;
+              padding: 5px 0;
               vertical-align: top;
 
               .checkbox {
@@ -270,7 +319,7 @@
                 &::after {
                   content: "";
                   display: block;
-                  height: 24px;
+                  height: 22px;
 
                   @media print {
                     height: 10px;
@@ -280,7 +329,7 @@
                 &::before {
                   border: solid 1px black;
                   margin-right: 3px;
-                  width: 24px;
+                  width: 22px;
 
                   @media print {
                     width: 10px;
@@ -332,6 +381,10 @@
         }
       }
     }
+
+    @media print {
+      margin-top: 25px;
+    }
   }
 
   .footer {
@@ -345,7 +398,8 @@
     }
 
     @media print {
-      font-size: 17px;
+      font-size: 12px;
+      margin-top: 30px;
     }
   }
 
