--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_primary-left-nav.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_primary-left-nav.scss
@@ -155,6 +155,7 @@
           &__text {
             opacity: 0;
             position: absolute;
+            z-index: -1;
           }
         }
       }
