--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
@@ -147,6 +147,27 @@
     }
   }
 
+  &--mini {
+    tr {
+      cursor: pointer;
+
+      th {
+        border-bottom: solid 2px rgba($color: black, $alpha: 0.3);
+        color: rgba($color: black, $alpha: 0.6);
+        font-weight: bold;
+        font-size: 1.4rem;
+        padding: unset;
+      }
+
+      td {
+        color: black;
+        font-size: 1.4rem;
+        font-weight: bold;
+        padding: 0.4rem 0.2rem;
+      }
+    }
+  }
+
   &__spacer {
     td {
       border-top: none;
