--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
@@ -30,6 +30,7 @@
     <td>{{ component.left ? "X" : "" }}</td>
     <td>{{ component.right ? "X" : "" }}</td>
     <td>{{ component.hasDrillFronts ? "YES" : "NO" }}</td>
+    <td>{{ component.drawerGap }}mm</td>
     <td>{{ component.drawerOne }}</td>
     <td>{{ component.drawerTwo }}</td>
     <td>{{ component.drawerThree }}</td>
