--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-tab/duraform-drawer-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-tab/duraform-drawer-tab.component.html
@@ -22,6 +22,7 @@
         Drill <br />
         Fronts
       </th>
+      <th rowspan="2" style="width: 7rem">Gap</th>
       <th colspan="5">Drawer Size</th>
       <th rowspan="2">Note</th>
       <th rowspan="2" colspan="2">Price</th>
@@ -46,6 +47,7 @@
     class="table__spacer"
     *ngIf="order.duraformEnquiry.duraformDrawers.length > 0"
   >
+    <td></td>
     <td></td>
     <td></td>
     <td></td>
