--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/run-sheet-form/run-sheet-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/run-sheet-form/run-sheet-form.component.html
@@ -9,40 +9,49 @@
         [values]="drivers"
         [valueKey]="'id'"
         [valueDisplay]="'fullName'"
+        [isDisabled]="disableChangingDriver"
         (afterSet)="onSelectDriver()"
       ></app-select-menu>
     </div>
-    <table class="table table--left table--mini">
-      <thead>
-        <tr>
-          <th style="width: 7rem">Order No.</th>
-          <th class="text-center" style="width: 7rem">Parts</th>
-          <th>Address</th>
-          <th class="text-center" style="width: 8rem">Postcode</th>
-          <th class="text-right" style="width: 6rem"></th>
-        </tr>
-      </thead>
-      <tbody *ngIf="selectedSheet">
-        <tr *ngFor="let item of selectedSheet.enquiriesForRunSheet">
-          <td>
-            <a
-              target="_blank"
-              [routerLink]="['/dashboard/duraform/', { id: item.enquiryId }]"
-            >
-              {{ item.enquiryId | leading: "000000" }}
-            </a>
-          </td>
-          <td class="text-center">{{ item.partCount }}</td>
-          <td>{{ item.address }}, {{ item.suburb }} {{ item.state }}</td>
-          <td class="text-center">{{ item.postcode }}</td>
-          <td class="text-right">
-            <button class="btn btn--link" (click)="onUndoDelivering(item)">
-              Remove
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div
+      class="rsf__patch-list"
+      *ngIf="selectedSheet && selectedSheet.getPatchDetails().length > 0"
+    >
+      <div class="patch" *ngFor="let patch of selectedSheet.getPatchDetails()">
+        <div class="patch__cabinet-maker">{{ patch.cabinetMakerName }}</div>
+        <div class="patch__address">{{ patch.fullAddress }}</div>
+        <div class="patch__detail-table">
+          <table>
+            <thead>
+              <tr>
+                <th class="col__enquiry-id">Job No.</th>
+                <th class="col__customer-ref">Order No.</th>
+                <th class="col__door-type">Door Type</th>
+                <th class="col__door-colour">Door Colour</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let enquiry of patch.enquiriesForRunSheet">
+                <td>{{ enquiry.enquiryId | leading }}</td>
+                <td>{{ enquiry.customerReference }}</td>
+                <td>{{ enquiry.doorType }}</td>
+                <td>{{ enquiry.doorColor }}</td>
+                <td>
+                  <button
+                    class="btn btn--link"
+                    *ngIf="!selectedSheet.lockedDate"
+                    (click)="onUndoDelivering(enquiry)"
+                  >
+                    Remove
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="rsf__footer">
     <div class="row">
@@ -53,7 +62,7 @@
           (click)="onPrint()"
         >
           <i class="fa fa-print" aria-hidden="true"></i>
-          Print
+          {{ selectedSheet.lockedDate ? "Print" : "Lock & Print" }}
         </button>
       </div>
       <div class="col-1-2 right">
