--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/run-sheet-pdf/run-sheet-pdf.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/run-sheet-pdf/run-sheet-pdf.component.html
@@ -26,7 +26,7 @@
     TOTAL ORDERS: {{ runSheet.enquiriesForRunSheet.length }}
   </div>
   <div class="rs-pdf__body">
-    <div class="patch" *ngFor="let patch of patches">
+    <div class="patch" *ngFor="let patch of runSheet.getPatchDetails()">
       <div class="patch__cabinet-maker">{{ patch.cabinetMakerName }}</div>
       <div class="patch__address">{{ patch.fullAddress }}</div>
       <div class="patch__detail-table">
