--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/4-layout/_grid.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/4-layout/_grid.scss
@@ -44,6 +44,10 @@ $col-gap: 1rem;
     width: calc((100% - 3 * #{$col-gap}) / 4);
   }
 
+  .col-2-4 {
+    width: calc(2 * ((100% - 3 * #{$col-gap}) / 4) + #{$col-gap});
+  }
+
   .col-3-4 {
     width: calc(3 * ((100% - 3 * #{$col-gap}) / 4) + 2 * #{$col-gap});
   }
