--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -93,6 +93,12 @@
                   Delivery
                 </a>
               </li>
+              <li>
+                <a [routerLink]="['/production/invoicing']">
+                  <i class="fa fa-inbox text-orange" aria-hidden="true"></i>
+                  Invoicing
+                </a>
+              </li>
             </ul>
           </div>
         </a>
