--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -60,6 +60,7 @@
 @import "./5-page/duraform-quote-page";
 @import "./5-page/duraform-price-page";
 @import "./5-page/delivery-page";
+@import "./5-page/invoice-process-page";
 
 @import "./../../../node_modules/alertifyjs/build/css/alertify.min.css";
 .ajs-message {
